[package]
name = "furry"
version = "0.1.1"
authors = ["Whanos <whanossergal@gmail.com>"]
categories = ["api-bindings"]
homepage = "https://github.com/Whanos/furry_crate"
edition = "2018"
repository = "https://github.com/Whanos/furry_crate.git"
license = "GPL-3.0-or-later"
readme = "README"
description = "API wrapper for e926."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
